version/0.22/_sources/api/solver/_autosummary/settings/latent_heat.rst.txt
:orphan:

.. _latent_heat:

latent_heat
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.latent_heat.latent_heat
    :show-inheritance:

.. rubric:: Attributes

=========================   ====================================================

Attribute                                                                Summary

=========================   ====================================================
:ref:`option <option_12>`       Select method for calculating material property.

:ref:`value <value_11>`                     Specify the constant property value.

=========================   ====================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

